# Project-motion

./: README.md  plot_results.py  results.txt
code/motion-eise/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
code/motion-eise/fig/motion_chain/: motion_chain.tex
code/motion-eise/include/c/motion/: CCL.h  args.h  features.h  image.h  kNN.h  macros.h  morpho.h  sigma_delta.h  tools.h  tracking.h  video.h  visu.h
code/motion-eise/include/c/motion/CCL/: CCL_compute.h  CCL_struct.h
code/motion-eise/include/c/motion/features/: features_compute.h  features_io.h  features_struct.h
code/motion-eise/include/c/motion/image/: image_compute.h  image_struct.h
code/motion-eise/include/c/motion/kNN/: kNN_compute.h  kNN_io.h  kNN_struct.h
code/motion-eise/include/c/motion/morpho/: morpho_compute.h  morpho_struct.h
code/motion-eise/include/c/motion/sigma_delta/: sigma_delta_compute.h  sigma_delta_struct.h
code/motion-eise/include/c/motion/tracking/: tracking_compute.h  tracking_io.h  tracking_struct.h
code/motion-eise/include/c/motion/video/: video_io.h  video_struct.h
code/motion-eise/include/c/motion/visu/: visu_io.h  visu_struct.h
code/motion-eise/include/cpp/motion/: tools.hpp
code/motion-eise/src/common/: args.c  args.cpp  tools.c  tools.cpp
code/motion-eise/src/common/CCL/: CCL_compute.c
code/motion-eise/src/common/features/: features_compute.c  features_io.c
code/motion-eise/src/common/image/: image_compute.c
code/motion-eise/src/common/kNN/: kNN_compute.c  kNN_io.c
code/motion-eise/src/common/morpho/: morpho_compute.c
code/motion-eise/src/common/sigma_delta/: sigma_delta_compute.c
code/motion-eise/src/common/tracking/: tracking_compute.c  tracking_io.c  tracking_struct.c
code/motion-eise/src/common/video/: video_io.c  video_struct.c
code/motion-eise/src/common/visu/: visu_io.c
code/motion-eise/src/main/: motion.c  motion2.c
plots/: results_parsed.csv
